[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/arial.ttf"

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = SubResource( 1 )

[node name="CMainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LTitle" type="Label" parent="."]
margin_left = 486.0
margin_top = 102.0
margin_right = 736.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 2 )
text = "Pong"
align = 1
valign = 1

[node name="BPlay" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 498.0
margin_top = 344.0
margin_right = -522.0
margin_bottom = -292.0
text = "Play"

[node name="BPlayAI" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 501.0
margin_top = 444.0
margin_right = -519.0
margin_bottom = -192.0
text = "Play AI"

[node name="BExit" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 501.0
margin_top = 552.0
margin_right = -519.0
margin_bottom = -84.0
text = "Exit"

[connection signal="pressed" from="BPlay" to="." method="_on_BPlay_pressed"]
[connection signal="pressed" from="BPlayAI" to="." method="_on_BPlayAI_pressed"]
[connection signal="pressed" from="BExit" to="." method="_on_BExit_pressed"]
